--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.cube{
+/*.cube{
 position: relative;
 width: 300px;
 height: 300px;
@@ -15,3 +15,4 @@ animation: animated 4s linear infinite
         transform
     }
 }
+*/
